--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,10 +4,10 @@ updates:
     directory: "/" 
     schedule:
       interval: "daily"
-  package-ecosystem: "pip" 
+  - package-ecosystem: "pip" 
     schedule:
       interval: "daily"
-  package-ecosystem: "github-actions" 
+  - package-ecosystem: "github-actions" 
     directory: "/.github/workflows" 
     schedule:
       interval: "daily"
