--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,7 +4,8 @@ updates:
     directory: "/" 
     schedule:
       interval: "daily"
-  - package-ecosystem: "pip" 
+  - package-ecosystem: "pip"
+    directory: "/"
     schedule:
       interval: "daily"
   - package-ecosystem: "github-actions" 
